Modified tree compiles with increased PermGen and forked javac.